@@ -13,7 +13,6 @@ from traceback import format_exception
 from satchmo.configuration import config_get_group
 from satchmo.configuration import config_value 
 from satchmo.contact.models import Order, OrderPayment
-from satchmo.payment.common.pay_ship import send_order_confirmation
 from satchmo.payment.common.utils import record_payment, create_pending_payment
 from satchmo.payment.common.views import payship
 from satchmo.payment.config import payment_live
@@ -152,9 +151,6 @@ def ipn(request):
             for cart in Cart.objects.filter(customer=order.contact):
                 cart.empty()
                 
-            if order.paid_in_full:
-                send_order_confirmation(order)
-
     except:
         log.exception(''.join(format_exception(*exc_info())))
 
